<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="gotoLast"
                    android:text="@string/layout_tv_last" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="gotoNext"
                    android:text="@string/layout_tv_next" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="replace"
                    android:text="@string/layout_tv_replace" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="replaceAll"
                    android:text="@string/layout_tv_replaceAll" />


            </LinearLayout>

        </HorizontalScrollView>


        <EditText
            android:id="@+id/search_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_to_search" />

        <EditText
            android:id="@+id/replace_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/replacement" />

    </LinearLayout>
    <io.github.rosemoe.sora.widget.CodeEditor
        android:id="@+id/editor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="36dp" />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="-36dp"
        android:layout_above="@+id/editor">

        <com.tglt.code.editor.widget.SymbolInputView
            android:id="@+id/symbol_input"
            android:layout_width="wrap_content"
            android:layout_height="36dp" />
    </HorizontalScrollView>
</LinearLayout>