<?xml version="1.0" encoding="utf-8"?>
<com.github.clans.fab.FloatingActionMenu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:clickable="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    fab:menu_fab_size="normal"
    fab:menu_showShadow="true"
    fab:menu_shadowColor="#66000000"
    fab:menu_shadowRadius="4dp"
    fab:menu_shadowXOffset="1dp"
    fab:menu_shadowYOffset="3dp"
    fab:menu_colorRipple="@color/colorPrimary"
    fab:menu_colorNormal="@color/debug"
    fab:menu_colorPressed="@color/colorPrimaryDark"
    fab:menu_animationDelayPerItem="50"
    fab:menu_buttonSpacing="0dp"
    fab:menu_labels_margin="0dp"
    fab:menu_labels_paddingTop="4dp"
    fab:menu_labels_paddingRight="8dp"
    fab:menu_labels_paddingBottom="4dp"
    fab:menu_labels_paddingLeft="8dp"
    fab:menu_labels_padding="8dp"
    fab:menu_icon="@drawable/ic_outline_bug_report_24"
    android:src="@drawable/ic_outline_bug_report_24"
    app:srcCompat="@drawable/ic_outline_bug_report_24"
    fab:menu_labels_style="@style/menu_labels_style"
    >
    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_insert_drive_file_24"
        fab:fab_colorNormal="@color/blue"
        app:fab_colorPressed="@color/blue"
        app:fab_colorRipple="#99FFFFFF"
        fab:fab_size="mini"
        fab:fab_label="@string/newtab"/>
    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_play_arrow_24"
        fab:fab_colorNormal="@color/blue"
        app:fab_colorPressed="@color/blue"
        app:fab_colorRipple="#99FFFFFF"
        fab:fab_size="mini"
        fab:fab_label="@string/run"/>
    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_save"
        fab:fab_colorNormal="@color/blue"
        app:fab_colorPressed="@color/blue"
        app:fab_colorRipple="#99FFFFFF"
        fab:fab_size="mini"
        fab:fab_label="@string/save"
        />
    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_save_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_file_copy_24"
        fab:fab_colorNormal="@color/blue"
        app:fab_colorPressed="@color/blue"
        app:fab_colorRipple="#99FFFFFF"
        fab:fab_size="mini"
        fab:fab_label="@string/save_as"/>
</com.github.clans.fab.FloatingActionMenu>